option('enable_guard_pattern',
    type: 'boolean',
    value: false,
    description: 'Add 32 bytes on the left and the right sides of each frame, fills them with a certain value, and checks their integrity after each filter. It can be used to detect buggy filters that write a little outside the frame',
)

option('enable_x86_asm',
    type: 'boolean',
    value: true,
    description: 'Enable assembler code for x86 CPUs',
)

option('enable_core',
    type: 'boolean',
    value: true,
    description: 'Build the VapourSynth core library',
)

option('enable_vsscript',
    type: 'boolean',
    value: true,
    description: 'Build VSScript. Requires Python 3',
)

option('enable_vspipe',
    type: 'boolean',
    value: true,
    description: 'Build vspipe. Requires VSScript',
)

option('enable_python_module',
    type: 'boolean',
    value: true,
    description: 'Build the Python module. Requires Python, Cython, and the core',
)

option('plugindir',
    type: 'string',
    value: '$libdir/vapoursynth',
    description: 'The default value for the configuration option SystemPluginDir in vapoursynth.conf',
)

option('build_wheel',
    type: 'boolean',
    value: false,
    description: 'If true, the install directory for core, vsscript and vspipe will be changed to "site-packages/vapoursynth"',
)
