option('enable_guard_pattern',
    type: 'boolean',
    value: false,
    description: 'Add 32 bytes on the left and the right sides of each frame, fills them with a certain value, and checks their integrity after each filter. It can be used to detect buggy filters that write a little outside the frame',
)

option('enable_x86_asm',
    type: 'boolean',
    value: true,
    description: 'Enable assembler code for x86 CPUs',
)
