[build-system]
requires = ["Cython>=3.1.0", "meson-python"]
build-backend = "mesonpy"

[project]
name = "VapourSynth"
description = "A frameserver for the 21st century"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-or-later"
license-files = ["COPYING.LESSER"]
authors = [
    {name = "Fredrik Mellbin", email = "fredrik.mellbin@gmail.com"},
]
keywords = ["frameserver", "video", "audio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.vapoursynth.com/"
Documentation = "https://www.vapoursynth.com/doc/"
Repository = "https://github.com/vapoursynth/vapoursynth.git"
Issues = "https://github.com/vapoursynth/vapoursynth/issues"
Changelog = "https://github.com/vapoursynth/vapoursynth/blob/master/ChangeLog"

[project.scripts]
vapoursynth-config = "vapoursynth:vapoursynth_config"
vapoursynth-check-env = "vapoursynth:vapoursynth_check_env"
vspipe = "vapoursynth:vspipe"
vapoursynth-register-install = "vapoursynth:register_install"
vapoursynth-register-vfw = "vapoursynth:register_vfw"

[tool.meson-python]
limited-api = true

[tool.meson-python.args]
setup = ["-Dbuild_wheel=true"]

[tool.meson-python.wheel]
exclude = ["*/vapoursynth.lib"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"test/environment_test.py" = ["F811", "F841"]
"test/weakref_test.py" = ["F841"]
"__init__.py" = ["F401", "F403", "F405"]
